# axum-boot

./: Cargo.toml  README.md
axum-boot-core/: Cargo.toml
axum-boot-core/src/: lib.rs
axum-boot-core/src/error/: mod.rs
axum-boot-core/src/repository/: mod.rs
axum-boot-core/src/request/: mod.rs
axum-boot-core/src/service/: mod.rs
axum-boot-core/src/util/: mod.rs
axum-boot-example/: Cargo.toml
axum-boot-example/src/: app.rs  main.rs
axum-boot-example/src/example/: authorizers.rs  handler.rs  mod.rs
axum-boot-security/: Cargo.toml
axum-boot-security-macros/: Cargo.toml
axum-boot-security-macros/src/: lib.rs  util.rs
axum-boot-security-macros/src/authenticated/: mod.rs
axum-boot-security-macros/src/authorize/: mod.rs  parser.rs
axum-boot-security-macros/src/authorize_with/: mod.rs
axum-boot-security-macros/src/authorizer/: mod.rs
axum-boot-security-macros/src/roles/: mod.rs
axum-boot-security/src/: lib.rs
axum-boot-security/src/authorization/: jwt.rs  mod.rs  tuple.rs
axum-boot-security/src/oauth2/: jwks.rs
axum-boot-security/src/request/: extract.rs
axum-boot-security/src/request/extract/: authorization.rs
axum-boot-security/src/response/: mod.rs
axum-boot-security/src/user/: extract.rs  layer.rs  mod.rs  role.rs
axum-boot-service-derive/: Cargo.toml
axum-boot-service-derive/src/: lib.rs
src/: lib.rs  main.rs
