[package]
name = "axum-boot-security"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
axum-boot-core = { path = "../axum-boot-core" }
axum-boot-security-macros = { path = "../axum-boot-security-macros" }
base64 = "0.22.1"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { workspace = true }
serde_json = "1.0.140"
env_logger = "0.11.8"
log = "0.4.27"
